Fix bubble alignment

--- a/bubbles.css
+++ b/bubbles.css
@@ -3,7 +3,7 @@
     left: 48%;
     position: absolute;
     top: 20px;
-    width: 340px;
+    width: 200px;
 }
 .bubbles{
     background-color: rgba(255, 255, 255, 0.26);
